@@ -4,7 +4,7 @@
 \name{hash_sentiment_jockers_rinker}
 \alias{hash_sentiment_jockers_rinker}
 \title{Combined Jockers & Rinker Polarity Lookup Table}
-\format{A data frame with 11,709 rows and 2 variables}
+\format{A data frame with 11,710 rows and 2 variables}
 \usage{
 data(hash_sentiment_jockers_rinker)
 }
